# foundationpp

./: CMakeLists.txt  README.md
cmake/: StdModuleProvider.cmake  SymbolExports.cmake  Toolchain-LLVM21.cmake  foundationpp-config.cmake.in
modules/: CMakeLists.txt  bundle.cppm  collections.cppm  concurrency.cppm  data.cppm  error.cppm  foundationpp.cppm  foundationpp.exports  memory.cppm  notification.cppm  object.cppm  process.cppm  string.cppm  time.cppm  types.cppm
modules/detail/: detail.cppm  runtime.cppm
